Novinky #08 - finalni edit textu

--- a/frontend-novinky/frontend-novinky-08.html
+++ b/frontend-novinky/frontend-novinky-08.html
@@ -513,11 +513,11 @@ Email se nezobrazuje dobře?<br /><a href="*|ARCHIVE|*" target="_blank">Otevřet
 
 <p>Strašně moc zajímavá ale tahle knížka může být pro všechny ostatní. Je to „status quo“ responzivního designu reflektující vývoj posledních šesti let.</p>
 
-<p>Sázím svoje responzivní ponožky, že někde kolem vás je člověk, kterému tahle knížka pomůže otevřít vidění principů  responzivního designu. Váš klient, šéf, grafik nebo kolega programátor. Ti všichni tu knížku potřebují.</p>
+<p>Sázím svoje responzivní ponožky, že někde kolem vás je člověk, kterému tahle knížka pomůže pochopit principy responzivního designu. Váš klient, šéf, grafik nebo kolega programátor. Ti všichni by „Patterns &amp; Principles“ měli přečíst.</p>
 
 <p>Vyplatí se vám ji jim koupit, věřte mi.</p>
 
-<p>Autor pojmu „responzivní design“ napsal <a href="http://abookapart.com/products/responsive-design-patterns-principles">novou knihu</a>.</p>
+<p>Protože autor pojmu „responzivní design“ napsal <a href="http://abookapart.com/products/responsive-design-patterns-principles">novou knihu</a>.</p>
 
 <hr />
 
@@ -525,11 +525,13 @@ Email se nezobrazuje dobře?<br /><a href="*|ARCHIVE|*" target="_blank">Otevřet
 
 <p><a href="http://www.vzhurudolu.cz/kurzy"><img src="http://i.snag.gy/icTyL.jpg" alt="Školení Vzhůru dolů" /></a></p>
 
-<p>Už příští týden si nejprve s Riki Fridrichem pořádně nabrousíte <strong><a href="http://www.vzhurudolu.cz/kurzy/grunt-gulp">Grunt nebo Gulp</a></strong>, ale i další automatizační nástroje.</p>
+<p>Už za pár dní si s Riki Fridrichem pořádně nabrousíte postupy s <strong><a href="http://www.vzhurudolu.cz/kurzy/grunt-gulp">Gruntem, Gulpem</a></strong> nebo Bowerem a Yeomanem.</p>
 
-<p>Můj <strong><a href="http://www.vzhurudolu.cz/kurzy/responzivni-design">responzivní design</a></strong> je zaměřený na opomíjené a podstatné principy. Nově ale přidávám technikálie, o kterých jsem ještě nic nepsal.</p>
+<p>Následuje můj <strong><a href="http://www.vzhurudolu.cz/kurzy/responzivni-design">responzivní design</a></strong>. Kromě základních technik zmiňuji i některé z principů, kterých se dotýká Marcotteho kniha. Nově také přidávám technikálie, o kterých jsem ještě nic nepsal.</p>
 
 <p>Hned další týden pak školím <strong><a href="http://www.vzhurudolu.cz/kurzy/rychlost-nacitani">optimalizaci rychlosti načítání</a></strong>. U Rikiho zrychlíte sebe, tady své weby. O dost.</p>
+
+<p>Školení jsou <strong>už příští a přespříští týden</strong>, takže neváhejte s rozhodování.</p>
 
 <hr />
 
@@ -538,9 +540,9 @@ Email se nezobrazuje dobře?<br /><a href="*|ARCHIVE|*" target="_blank">Otevřet
 <p>Výběr zajímavých odkazů pro vás nachystal <a href="http://www.twitter.com/martinpesout">Martin Pešout</a>:</p>
 
 <ul>
-<li><strong><a href="https://developer.apple.com/library/prerelease/mac/releasenotes/General/WhatsNewInSafari/Articles/Safari_9_1.html">Vývojáři Safari přidali řadu užitečných vylepšení.</a></strong> Vývojáři Safari přidali v poslední aktualizaci na verzi 9.1 několik zásadních vylepšení. Prohlížeč nově podporuje HTML <code>picture</code> element, můžete využívat CSS proměnné, CSS <code>filter</code> můžete nově zapisovat i bez <code>-webkit</code> prefixů a mohem více.</li>
+<li><strong><a href="https://developer.apple.com/library/prerelease/mac/releasenotes/General/WhatsNewInSafari/Articles/Safari_9_1.html">Vývojáři Safari přidali řadu užitečných vylepšení.</a></strong> Safari dostalo v poslední aktualizaci na verzi 9.1 několik zásadních vylepšení. Prohlížeč nově podporuje HTML <code>picture</code> element, můžete využívat CSS proměnné, CSS <code>filter</code> můžete nově zapisovat i bez <code>-webkit</code> prefixů a mohem více.</li>
 <li><strong><a href="http://www.responsivebreakpoints.com/">Generátor variant obrázků pro <code>&lt;img srcset&gt;</code>.</a></strong> Šikovný nástroj, který vám umožní vložit obrázek, vygenerovat jeho responsivní varianty a vše zasadit do výsledného <code>&lt;img srcset&gt;</code> tagu. Více informací o atributech <code>srcset</code> a <code>sizes</code> najdete také v <a href="http://www.vzhurudolu.cz/prirucka/srcset-sizes">článku na Vzhůru dolů</a>.</li>
-<li><strong><a href="http://www.sitepoint.com/an-introduction-to-css-supports-rule-feature-queries/">CSS @support v praxi.</a></strong> Javascriptová knihovna Modernizr bývá mnohdy nejpoužívanějším nástrojem v situacích, kdy chceme využívat nových vychytávek z CSS. Článek ukazuje, že se dokážeme obejít i bez Javascriptu. Podívejme se, jak lze detekovat CSS vlastnost <code>mix-blend-mode</code> pouze pomocí pravidla <code>@support</code>.</li>
+<li><strong><a href="http://www.sitepoint.com/an-introduction-to-css-supports-rule-feature-queries/">CSS @support v praxi.</a></strong> Detekční knihovna Modernizr bývá užitečným nástrojem v situacích, kdy chceme využívat nových CSS vychytávek. Článek ukazuje, že se dokážeme obejít i bez Javascriptu. Podívejme se, jak lze detekovat CSS vlastnost <code>mix-blend-mode</code> pouze pomocí pravidla <code>@support</code>.</li>
 <li><strong><a href="http://maxwellito.github.io/vivus/">Rozpohybujte své SVG obrázky.</a></strong> <code>vivus</code> je šikovná javascriptová knihovna, která dokáže animovat vložené SVG obrázky na webu. Celá animace pak působí dojmem, jako by byl obrázek postupně vykreslen rukou.</li>
 </ul>
 
@@ -554,7 +556,7 @@ Email se nezobrazuje dobře?<br /><a href="*|ARCHIVE|*" target="_blank">Otevřet
 <ul>
 <li><strong><a href="http://www.vzhurudolu.cz/blog/47-znicit-mobilistu-1">Jak zničit mobilního uživatele?</a></strong>. Pomalým načítáním, karusely a schováním navigace. <a href="http://www.vzhurudolu.cz/blog/48-znicit-mobilistu-2">V druhém dílu</a> jej pak dorazíte třeba zákazem zoomování nebo schováním obsahu.</li>
 <li><strong><a href="http://www.vzhurudolu.cz/prirucka/checklist">Kontrolní seznam frontend kodéra</a></strong>. Co všechno zkontrolovat než odevzdáte svou práci?</li>
-<li><strong><a href="http://www.vzhurudolu.cz/blog/50-woff2">Jednodušší vkládání webfontů pomocí WOFF a WOFF2</a></strong>. TTF, EOT nebo SVG už nemusíte používat.</li>
+<li><strong><a href="http://www.vzhurudolu.cz/blog/50-woff2">Jednodušší vkládání webfontů pomocí WOFF a WOFF2</a></strong>. TTF, EOT nebo SVG už většinou nemusíte používat.</li>
 <li><strong><a href="http://www.vzhurudolu.cz/blog/45-2015-mobilni-web">Novinky mobilního webu v roce 2015</a></strong>. Je jich jako máku v koláči.</li>
 </ul>
 
