Novinky #08 - vlozene Mailchimp obrazky

--- a/frontend-novinky/frontend-novinky-08.html
+++ b/frontend-novinky/frontend-novinky-08.html
@@ -503,7 +503,7 @@ Email se nezobrazuje dobře?<br /><a href="*|ARCHIVE|*" target="_blank">Otevřet
 
 <p>Podobně jako v první knize vás ale Marcotte nezavalí nákladem novinek a technických vymožeností. Pro nejnovějším technické vychytávky nebo hloubku informací je proto lepší hledat jiné zdroje.</p>
 
-<p><img src="http://cdn.shopify.com/s/files/1/0051/7692/products/ABA-hero-15.jpg?v=1447854737" alt="Responsive Design: Patterns &amp; Principles" /></p>
+<p><img src="https://gallery.mailchimp.com/d6be2f1899eba6a7651157403/images/da1c4d3c-4fce-4b2d-b4d2-94850cfe2284.jpg" alt="Responsive Design: Patterns &amp; Principles" /></p>
 
 <p>Ethan umí jiné věci. Umí trpělivě, precizně a vtipně vysvětlovat hluboké principy. Tak, aby vzniklý obsah měl co nejšiřší dopad. Váháte co tím myslím? Ethan vymyslel „responzivní webdesign“ a já se sázím, že o tom jste něco slyšeli.</p>
 
@@ -523,7 +523,7 @@ Email se nezobrazuje dobře?<br /><a href="*|ARCHIVE|*" target="_blank">Otevřet
 
 <h2>Nepromeškejte termíny školení, která vás posunout&nbsp;dál</h2>
 
-<p><a href="http://www.vzhurudolu.cz/kurzy"><img src="http://i.snag.gy/icTyL.jpg" alt="Školení Vzhůru dolů" /></a></p>
+<p><a href="http://www.vzhurudolu.cz/kurzy"><img src="https://gallery.mailchimp.com/d6be2f1899eba6a7651157403/images/1626bbba-5698-4b7a-8e8a-ad62a814b1ac.jpg" alt="Školení Vzhůru dolů" /></a></p>
 
 <p>Už za pár dní si s Riki Fridrichem pořádně nabrousíte postupy s <strong><a href="http://www.vzhurudolu.cz/kurzy/grunt-gulp">Gruntem, Gulpem</a></strong> nebo Bowerem a Yeomanem.</p>
 
