Prejmenovani HTML souboru - pripony s tematy & drobne korekce posledniho vydani

--- a/frontend-novinky/frontend-novinky-09-checklist.html
+++ b/frontend-novinky/frontend-novinky-09-checklist.html
@@ -449,6 +449,31 @@
 
 				.footerContent a{display:block !important;} /* Place footer social and utility links on their own lines, for easier access */
 			}
+
+			/* === VD styles === */
+			
+			.text-center {
+				text-align: center;
+			}
+			
+			.vd-button {
+				-webkit-appearance: none;
+				-moz-appearance: none;
+				display: inline-block;
+				line-height: 1.5;
+				padding: 5px 15px;
+				background: 0 0;
+				color: #5fa316;
+				border: 1px solid #5fa316;
+				border-radius: 3px;
+				cursor: pointer;		
+				text-decoration: none !important;								
+			}
+
+			.vd-button:hover {
+				background-color: #5fa316;
+				color: #fff !important;
+			}			
 		</style>
     </head>
     <body leftmargin="0" marginwidth="0" topmargin="0" marginheight="0" offset="0">
@@ -464,7 +489,7 @@
                                     <table border="0" cellpadding="0" cellspacing="0" width="100%" id="templatePreheader">
                                         <tr>
                                             <td valign="top" class="preheaderContent" style="padding-top:10px; padding-right:100px; padding-bottom:10px; padding-left:20px;" mc:edit="preheader_content00">
-#8: Jaká je kniha Responsive Design: Patterns &&nbsp;Principles?
+#9: Webařův checklist teď i jako aplikace
                                             </td>
                                             <!-- *|IFNOT:ARCHIVE_PAGE|* -->
                                             <td valign="top" width="180" class="preheaderContent" style="padding-top:10px; padding-right:20px; padding-bottom:10px; padding-left:0;" mc:edit="preheader_content01">
@@ -506,18 +531,18 @@ Email se nezobrazuje dobře?<br /><a href="*|ARCHIVE|*" target="_blank">Otevřet
 												<p>Já vím, já vím. Obojí je trochu nepraktické. A proto vznikla tahle miniaplikace. Nejlepší bude, když si ji prostě otevřete:</p>
 
 												<p class="text-center">
-													<a href="http://www.vzhurudolu.cz/checklist" class="button">Vyzkoušet checklist</a>
+													<strong><a href="http://www.vzhurudolu.cz/checklist" class="vd-button">Vyzkoušet checklist</a></strong>
 												</p>
 
 												<p>Funguje tak, jak asi očekáváte:</p>
 
 												<ul>
-													<li>Prok každý projekt si vytvoříte nový seznam a případně jej nasdílíte s kolegy.</li>
+													<li>Pro každý projekt si vytvoříte nový seznam a případně jej nasdílíte s kolegy.</li>
 													<li>Přidáváte, upravujte nebo mažete položky seznamů.</li>
 													<li>My vám budeme ukládat průběžný stav plnění úkolů na serveru, abyste to měli dostupné ze všech zařízení.</li>
 												</ul>
 
-												<p>Hlavní cílovou skupinou jsou frontend kodéři. Největší využití checklist najde pro dokončovací práce na statických webech. Je v něm ale řada překryvů do backendu i dalších webařských řemesel. Zkuste si to.</p>
+												<p>Hlavní cílovou skupinou jsou frontend kodéři. Největší využití checklist najde pro dokončovací práce na statických webech. Je v něm ale řada překryvů do backendu, webových aplikací, ale i dalších webařských řemesel. Zkuste si to.</p>
 
 												<p>Nápady a připomínky k funkčnosti i obsahu velmi vítám. Odpovězte na tento email nebo prostě napište na <a href="mailto:martin@vzhurudolu.cz">martin@vzhurudolu.cz</a>.</p>
 
