Novinky #10 - pridani obrazku a upravy pred odeslanim

--- a/frontend-novinky/frontend-novinky-10-css-mine.html
+++ b/frontend-novinky/frontend-novinky-10-css-mine.html
@@ -522,6 +522,8 @@ Email se nezobrazuje dobře?<br /><a href="*|ARCHIVE|*" target="_blank">Otevřet
 
 												<h1>Představuji CSS Mine, anglickou verzi e-booku</h1>
 
+												<p><a href="http://cssmine.com/"><img src="https://gallery.mailchimp.com/d6be2f1899eba6a7651157403/images/f4efc7b3-efa5-42bf-bf54-f03b0f95a96d.jpg" alt="CSS Mine"></a></p>
+
 												<p>Horníci ze „Vzhůru dolů“ si otevřeli průzkumný vrt v anglicky mluvícím světě. Vy už obsah CSS Mine znáte <a href="http://www.vzhurudolu.cz/ebook">z českého e-booku</a>. Je ale docela možné, že spolupracujete s někým, kdo si v češtině moc nepočte. Sdílením nebo doporučením rozhodně nic nezkazíte. <em>Thanks for any help!</em></p>
 
 												<ul>
@@ -552,6 +554,20 @@ Email se nezobrazuje dobře?<br /><a href="*|ARCHIVE|*" target="_blank">Otevřet
 
 												<h2>Zveme na dvě dubnová školení: „SVG“ a „Dnešní webová kodéřina“</h2>
 
+												<table align="center" border="0" cellpadding="0" cellspacing="0" height="100%" width="100%">
+													<tbody>
+														<tr>
+															<td width="270">
+																<a href="http://www.vzhurudolu.cz/kurzy/svg"><img src="https://gallery.mailchimp.com/d6be2f1899eba6a7651157403/images/bac0f818-52ac-48e5-b5eb-fb53aac24ec4.png" alt="SVG"></a>
+															</td>
+															<td width="10">&nbsp;</td>
+															<td width="270">
+																<a href="http://www.vzhurudolu.cz/kurzy/webova-koderina"><img src="https://gallery.mailchimp.com/d6be2f1899eba6a7651157403/images/ce93b891-f154-4db3-9e11-f6eb1956f3c2.png" alt="Dnešní webová kodéřina"></a>
+															</td>															
+														</tr>
+													</tbody>
+												</table>
+
 												<ul>
 												<li><a href="http://www.vzhurudolu.cz/kurzy/svg">SVG</a> s Michalem Matuškou. Po dvou zaplněných termínech přidáváme třetí. Vhodné i pro pokročilejší SVG borce. Přihlaste se na <a href="http://www.vzhurudolu.cz/kurzy/svg">19. dubna</a>.</li>
 												<li><a href="http://www.vzhurudolu.cz/kurzy/webova-koderina">Dnešní webová kodéřina</a>. Ideální pro aktualizaci vašich znalostí CSS a HTML. Školím už <a href="http://www.vzhurudolu.cz/kurzy/webova-koderina">21. dubna</a>.</li>
@@ -562,13 +578,13 @@ Email se nezobrazuje dobře?<br /><a href="*|ARCHIVE|*" target="_blank">Otevřet
 
 												<hr />
 
-												<h3>O čem jsem psal na Vzhůru dolů?</h3>
+												<h2>O čem jsem psal na Vzhůru dolů?</h2>
 
 												<ul>
 												<li>Hodně o <a href="http://www.vzhurudolu.cz/prirucka/svg">Scalable Vector Graphics</a>. O tom, jak vyřešit zobrazování <a href="http://www.vzhurudolu.cz/prirucka/svg-fallbacky">SVG ve starších prohlížečích</a>. Pak konkrétně o <a href="http://www.vzhurudolu.cz/prirucka/svg">Grunticon</a>, nástroji pro maximalizaci oné kompatibility.</li>
 												<li><a href="http://www.vzhurudolu.cz/blog/53-reboot">O Rebootu</a>, což je  je další evoluční krok pro resetování CSS a součást přicházejícího Bootstrapu 4.</li>
 												<li>O Bootstrapu jsem udělal také <a href="http://www.vzhurudolu.cz/blog/55-adam-kudrna-rozhovor">rozhovor s lektorem školení Adamem Kudrnou</a>.</li>
-												<li>Připravil jsem <a href="http://www.vzhurudolu.cz/prirucka/wai-aria">materiál o WAI-ARIA</a>, hezkém způsobu jak pořešit přístupnost zrakově postiženým. Natočil jsem k tomu i svůj první pokus o <a href="https://www.youtube.com/watch?v=sO_xOGgrE2Y">screencast</a>.</li>
+												<li>Připravil jsem <a href="http://www.vzhurudolu.cz/prirucka/wai-aria">materiál o WAI-ARIA</a>, hezkém způsobu jak pořešit přístupnost zrakově postiženým. Natočil jsem k tomu i svůj první pokus o screencast. ;)</li>
 												<li>A nakonec jsem napsal něco o budoucnosti CSS. Tedy doufám, že budoucnosti… doufám, že <a href="http://www.vzhurudolu.cz/blog/56-houdini-css">Houdini</a> nezapadne.</li>
 												</ul>
 
