--- a/frontend-novinky/frontend-novinky-24-2019-04.html
+++ b/frontend-novinky/frontend-novinky-24-2019-04.html
@@ -538,9 +538,7 @@ Email se nezobrazuje dobře?<br /><a href="*|ARCHIVE|*" target="_blank">Otevřet
 
 <p>obvykle vás na tomhle místě o něčem informuji, něco vám sděluji nebo vás někam zvu. Dneska se vás budu ptát.</p>
 
-<p>Připravil jsem dotazník ke školením pro webové vývojáře. </p>
-
-<p>Týká se i těch z vás, kteří na naše nebo jiná školení (zatím) nechodíte. Nezabere vám více než 5 minut času a jeho vyplněním nám pomůžete při udávání směru.</p>
+<p>Dotazník se týká se i těch z vás, kteří na naše nebo jiná školení (zatím) nechodíte. Nezabere vám více než 5 minut času a jeho vyplněním nám pomůžete při udávání směru. Díky moc!</p>
 
 <p><br></p>
 
@@ -548,17 +546,19 @@ Email se nezobrazuje dobře?<br /><a href="*|ARCHIVE|*" target="_blank">Otevřet
     <a class="vd-button" href="https://forms.gle/3qLgn9wTJKk4cJXX6">Vyplnit dotazník</a>
 </p>
 
-<p><br></p>
-
-<p>Díky moc!</p>
-
 <h2 id="toc_1">Aktuálně připravované kurzy v Brně</h2>
 
 <ul>
-<li>3. května <a href="https://www.vzhurudolu.cz/kurzy/wordpress">WordPress</a> – s webmistrem Honzou Bienem.</li>
-<li>28. května <a href="https://www.vzhurudolu.cz/kurzy/svg">SVG do hloubky</a> – ikony, animace, filtry a transformace s Michalem Matuškou.</li>
-<li>4. června <a href="https://www.vzhurudolu.cz/kurzy/newslettery">Kódo­vá­ní news­let­te­rů</a> – nově školení s Tomášem Krejčím.</li>
+<li>3. května: <a href="https://www.vzhurudolu.cz/kurzy/wordpress">WordPress</a> – s webmistrem Honzou Bienem.</li>
+<li>28. května: <a href="https://www.vzhurudolu.cz/kurzy/svg">SVG do hloubky</a> – s Michalem Matuškou.</li>
+<li>4. června: <a href="https://www.vzhurudolu.cz/kurzy/newslettery">Kódo­vá­ní news­let­te­rů</a> – nové školení s Tomášem Krejčím.</li>
 </ul>
+
+<p>
+    <a href="https://www.vzhurudolu.cz/kurzy">
+        <img src="https://gallery.mailchimp.com/d6be2f1899eba6a7651157403/images/08615f85-5f7b-4544-8619-089b10e405fb.jpg" alt="" width="550" height="301">
+    </a>
+</p>
 
 <p><br></p>
 
@@ -573,9 +573,9 @@ Email se nezobrazuje dobře?<br /><a href="*|ARCHIVE|*" target="_blank">Otevřet
 <ol>
 <li>Addy Osmani: <a href="https://addyosmani.com/blog/lazy-loading/">Native image lazy-loading for the web!</a></li>
 <li>Vzhůru dolů: <a href="https://www.vzhurudolu.cz/prirucka/js-priority">Priority stahování a spouštění JavaScriptu</a></li>
-<li>Sebastiano Guerriero: <a href="https://codyhouse.co/blog/post/dark-light-switch-css-javascript">Dark\light mode switch</a></li>
+<li>Sebastiano Guerriero: <a href="https://codyhouse.co/blog/post/dark-light-switch-css-javascript">Dark/light theme switch</a> (podle režimu v OS)</li>
 <li>Vzhůru dolů: <a href="https://www.vzhurudolu.cz/blog/140-amp-email-spusteni">AMP pro e-mail. Tohle může být revoluce</a></li>
-<li>Ivan Akulov: <a href="https://3perf.com/talks/web-perf-101/">Web Performance 101</a></li>
+<li>Ivan Akulov: <a href="https://3perf.com/talks/web-perf-101/">Web Performance 101</a> (hóódně tipů)</li>
 <li>Vzhůru dolů: <a href="https://www.vzhurudolu.cz/prirucka/devstacky">Frontendové devstac­ky: In­spi­rač­ní ka­ta­log</a></li>
 <li><a href="https://github.com/leeoniya/dropcss">DropCSS</a></li>
 </ol>
